crates/ui/tests/snapshots/panel_snapshots__training_status_strip__running.snap
---
source: crates/ui/tests/panel_snapshots.rs
assertion_line: 1863
expression: "training_status_summary(&c, \"running\")"
---
panel: training_status_strip
scenario: running
inflight: false
status_text: Idle
log_line_count: 1
last_log_line: [info] training started
